<resources>
    <string name="app_name">BERT</string>

    <string name="bert">B.E.R.T.</string>
    <string name="bertExpanded">Backyard Environment Recognition Tool</string>
    <string name="your_point">Your Point Is: </string>
    <string name="maps">maps</string>
    <string name="profile">Profile</string>
    <string name="bestiary">bestiary</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_bestiary">BestiaryActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_camera">CameraActivity</string>

    <string name="scientific_name"><u>Scientific Name</u></string>
    <string name="type"><u>Type</u></string>
    <string name="size"><u>Size</u></string>
    <string name="weight"><u>Weight</u></string>
    <string name="lifespan"><u>Lifespan</u></string>
    <string name="diet"><u>Diet</u></string>
    <string name="habitat"><u>Habitat</u></string>
    <string name="description"><u>Description</u></string>

    <string name="is_this">BERT has responded to your request.</string>
    <string name="congratulation">Congratulation!!</string>
    <string name="score">Score</string>

    <string name="is_this_two">Was The Species One of The Following:</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_select">SelectActivity</string>
    <string name="title_activity_upload_to_server">UploadToServerActivity</string>

    <string name="do_you_upload">Yes to upload image, No to return to menu.</string>

    <string name="level">Lv.1 Beginner</string>
    <string name="num_pic">Number of Captures</string>
    <string name="num_spe">Number of Species</string>

    <string name="title_activity_camera_and_feature_select">CameraAndFeatureSelect</string>
    <string name="title_activity_bestiary_detail">BestiaryDetailActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_final">FinalActivity</string>
    <string name="title_activity_second_result">SecondResultActivity</string>

</resources>
